Обновление index.html, style.scc (1 этап, v2)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="header-container">
             <div class="header-content">
                 <div class="header__menu">
-                    <a href="#1">
-                        <img src="../svg/noemi-logo.svg" class="header__logo" alt="noemi-logo">
+                    <a href="#1" class="header__logo">
+                        <!-- <img src="../svg/noemi-logo.svg" class="header__logo" alt="noemi-logo"> -->
                     </a>
                     <nav>
                         <div class="header__burger"></div>
@@ -36,8 +36,8 @@
             <div class="feature-line-65х3"></div>
         <div class="trends-content">
 
-            <div class="trend">
-                <img class="trend__img" src="../images/trend1.jpg" alt="picture-garden">
+            <div class="trend garden">
+                <!-- <img class="trend__img" src="../images/trend1.jpg" alt="picture-garden"> -->
                 <div class="trend__info">
                     <ul class="trend__tags">
                         <li class="trend__tag"><a href="#0" class="tag-link">lifestyle</a></li>
@@ -49,8 +49,8 @@
                 </div>
             </div>
 
-            <div class="trend">
-                <img class="trend__img" src="../images/trend2.jpg" alt="picture-chees">
+            <div class="trend chees">
+                <!-- <img class="trend__img" src="../images/trend2.jpg" alt="picture-chees"> -->
                 <div class="trend__info">
                     <ul class="trend__tags">
                         <li class="trend__tag"><a href="#0" class="tag-link">food</a></li>
@@ -61,8 +61,8 @@
                 </div>
             </div>
 
-            <div class="trend">
-                <img class="trend__img" src="../images/trend3.jpg" alt="picture-mountins">
+            <div class="trend mountins">
+                <!-- <img class="trend__img" src="../images/trend3.jpg" alt="picture-mountins"> -->
                 <div class="trend__info">
                     <ul class="trend__tags">
                         <li class="trend__tag"><a href="#0" class="tag-link">lifestyle</a></li>
@@ -74,8 +74,8 @@
                 </div>
             </div>
 
-            <div class="trend">
-                <img class="trend__img" src="../images/trend4.jpg" alt="picture-limun">
+            <div class="trend limun">
+                <!-- <img class="trend__img" src="../images/trend4.jpg" alt="picture-limun"> -->
                 <div class="trend__info">
                     <ul class="trend__tags">
                         <li class="trend__tag"><a href="#0" class="tag-link">lifestyle</a></li>
