правки по замечаниям

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="trends-container">
         <h2 class="title-page">сейчас в тренде</h2>
-            <p class="feature-line-65х3"></p>
+            <!-- <p class="feature-line-65х3"></p> -->
         <div class="trends-content">
 
             <div class="trend garden">
@@ -63,7 +63,7 @@
                         <li class="trend__tag"><a href="#0" class="tag-link">food</a></li>
                     </ul>
                     <h2 class="trend__title">
-                        <a href="#0" class="trend__link">Сыры на красивых картинках из интернета: какие они на вкус?
+                        <a href="#0" class="trend__link">Сыры на красивых картинках из интернета: какие они на вкус? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dignissimos soluta, similique, iste totam quas excepturi molestiae earum ducimus voluptate sit reprehenderit fugit libero? Quia temporibus molestias saepe natus eum. ____finish__
                             </a>
                     </h2>
                 </div>
@@ -124,6 +124,8 @@
                                  pariatur, enim accusamus ea cupiditate qui modi facere!___finish_
                                  22 Итак, вы в Питере. Раннее утро. Лед с рек и каналов уже ушел,   запущены фонтаны
                                  города... Музеи еще закрыты. Что посмотреть? Lorem ipsum dolor sit amet consectetur,
+                                 adipisicing elit. Porro quae rerum veritatis pariatur, enim accusamus ea cupiditate
+                                 qui modi facere! Музеи еще закрыты. Что посмотреть? Lorem ipsum dolor sit amet consectetur,
                                  adipisicing elit. Porro quae rerum veritatis pariatur, enim accusamus ea cupiditate
                                  qui modi facere!___finish__</p>
                         <!-- </div> -->
@@ -237,7 +239,7 @@
         <div class="side-bar">
                 <section class="side-bar-last-posts">
                     <h4 class="side-bar__title">новые посты</h4>
-                    <p class="feature-line-65х3"></p>
+                    <!-- <p class="feature-line-65х3"></p> -->
 
                     <ul class="last-posts__list">
                         <li class="last-post__item">
@@ -300,7 +302,7 @@
                 </form>
 
                 <h4 class="side-bar__title">РАССЫЛКА</h4>
-                <p class="feature-line-65х3"></p>
+                <!-- <p class="feature-line-65х3"></p> -->
 
                 <form class="side-bar__subscribe">
                     <input class="subscribe__input" type="email" placeholder="Ваш email-адрес" required>
@@ -308,7 +310,7 @@
                 </form>
 
                 <h4 class="side-bar__title">ТЕГИ</h4>
-                <p class="feature-line-65х3"></p>
+                <!-- <p class="feature-line-65х3"></p> -->
                 <nav class="side-bar__tags">
                     <ul class="side-bar__tags-list">
                         <li class="side-bar__tags-item"><a href="#0" class="side-bar__tags-link">fashion</a></li>
@@ -323,7 +325,7 @@
                 </nav>
 
                 <h4 class="side-bar__title">ТЕМЫ</h4>
-                <p class="feature-line-65х3"></p>
+                <!-- <p class="feature-line-65х3"></p> -->
                 <div class="side-bar__categories">
                     <nav class="side-bar__themes">
                         <ul class="side-bar__themes-list">
@@ -355,7 +357,7 @@
 
     <section class="shop">
         <h2 class="title-page">НАШИ ИЗДЕЛИЯ</h2>
-        <p class="feature-line-65х3"></p>
+        <!-- <p class="feature-line-65х3"></p> -->
 
         <div class="shop-container">
 
@@ -468,15 +470,15 @@
         <div class="footer__copyright">Copyright © 2009–2019 City Blog LLC.</div>
     </footer>
 
-    <div class="popup _hidden">
-        <div class="popup__form">
+    <aside class="popup _hidden">
+        <form class="popup__form">
             <div class="popup__close">
             </div>
             <div class="popup__conteiner">
                 <div class="popup__content">
                     <h3 class="popup__title">ВАШ ФИДБЕК</h3>
-                    <p class="feature-line-65х3"></p>
-                    <div class="question">Как часто Вы заходите на сайт?</div>
+                    <!-- <p class="feature-line-65х3"></p> -->
+                    <p class="question">Как часто Вы заходите на сайт?</p>
                     <select class="select">
                         <option selected>Почти каждый день</option>
                         <option>Раз в неделю</option>
@@ -484,7 +486,7 @@
                         <option>Раз в несколько месяцев</option>
                         <option>Затрудняюсь ответить</option>
                     </select>
-                    <div class="question">Вы подписаны на e-mail рассылку?</div>
+                    <p class="question">Вы подписаны на e-mail рассылку?</p>
                     <div class="switch">
                         <label>
                             <input type="radio" class="radio"  id="yes" name="answer" checked>
@@ -495,15 +497,15 @@
                             <span class="choice">Нет</span>
                         </label>
                     </div>
-                    <div class="question">Расскажите, какой контент Вы бы хотели видеть на нашем сайте?</div>
+                    <p class="question">Расскажите, какой контент Вы бы хотели видеть на нашем сайте?</p>
                     <label for="content"></label>
                     <textarea class="popup__message" id="content" cols="30" rows="5" placeholder="Может, больше рецептов?"></textarea>
 
                     <button class="popup__button">отправить</button>
                 </div>
             </div>
-        </div>
-    </div>
+        </form>
+    </aside>
 
 
 </body>
